# dymaxiel_rx28_rx24_bogobot

./: README.md
motores/: CMakeLists.txt
motores/src/: motores.cpp  pingMotores.cpp  servosPos (copia).txt  servosPos.txt  std_pose.cpp
